--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   }
   
-  #copyText:active{
+  .copyText:active{
     animation: 2s;
     background-color: red;
   }
